# rust_xat

./: .env.example  Cargo.toml  README.md  docker-compose.yml
src/: main.rs
src/models/: message.rs
static/: app.js  index.html  message.js
