[package]
name = "rust_xat"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.4", features = ["ws"] }
axum-extra = { version = "0.9.2", features = ["typed-header"] }
chrono = "0.4.31"
futures = "0.3.30"
futures-util = { version = "0.3.30", default-features = false, features = [
    "sink",
    "std",
] }
serde = { version = "1.0.196", features = ["derive"] }
tokio = { version = "1.35.1", features = ["full"] }
tower = "0.4.13"
tower-http = { version = "0.5.1", features = ["fs"] }
